fixed overflow

--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-html { background-color: #fff5f8; user-select: none; height: 100vh; width: 100vw;}
+html { background-color: #fff5f8; user-select: none; height: 100vh; width: 100vw; overflow-y: hidden; }
 
 body {
     margin: 0;
